[package]
edition = "2024"
name = "kmc"
version = "0.0.1"
authors = ["Varazdat Stepanyan"]
description = "a kinetic monte carlo engine designed for scientific computing"
readme = "README.md"
repository = "https://github.com/VarazdatStepanyan003/"
license = "GPL-3.0-only"
keywords = ["scientific", "simulation"]
publish = false


[dependencies]
rand = "0.9.2"
rayon = "1.11.0"
